--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  @apply bg-gray-950 text-slate-100;
+  /* background-color: #060608; */
+}
+
+p {
+  @apply text-secondary;
+}
