--- a/app/globals.css
+++ b/app/globals.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 body {
-  @apply bg-gray-950 text-slate-100;
-  /* background-color: #060608; */
+  @apply text-slate-100;
+  background-color: #070707;
 }
 
 p {
